[package]
authors = [
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "Denys Vitali <denys@denv.it>"
]
name = "poppler"
license = "GPL-2.0"
version = "0.3.1"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"
edition = "2018"

[dependencies]
poppler-sys = { version = "0.1.0", path = "poppler-sys" }
cairo-rs = { version = "0.13.*", features = ["png", "pdf"] }
glib = "0.13.*"
glib-sys = "0.13.*"
gobject-sys = "0.13.*"

[features]
default = []
generate-bindings = ["poppler-sys/generate-bindings"]
