[package]
name = "poppler-sys"
version = "0.1.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>",
          "Denys Vitali <denys@denv.it>",
          "Thiago Machado <swfsql@gmail.com>"]
build = "build.rs"
links = "poppler"
repository = "https://github.com/DMSrs/poppler-rs"
license = "GPL-2.0"
description = "Native bindings to the libpoppler library"
keywords = ["poppler"]
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.49.0"
semver = "0.9.0"

