[package]
name = "poppler-sys"
version = "0.1.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>",
          "Denys Vitali <denys@denv.it>",
          "Thiago Machado <swfsql@gmail.com>"]
build = "build.rs"
links = "poppler"
repository = "https://github.com/DMSrs/poppler-rs"
license = "GPL-2.0"
description = "Native bindings to the libpoppler library"
keywords = ["poppler"]
categories = ["external-ffi-bindings"]

[dependencies]
cairo-rs = { version= "0.6.0", features = ["png", "pdf"]}
cairo-sys-rs = "0.8.0"
glib = "0.7.1"
glib-sys = "0.8.0"
gobject-sys = "0.8.0"
gio-sys = "0.8.0"
gtypes = "0.2.0"

[build-dependencies]
bindgen = "0.49.0"
semver = "0.9.0"

